CT-628 Handle send-claims reactive